src/less/nav.less
@import "variables.less";

.nav {
  border-radius: 20px;
  border: double @sceneBorderWidth black;

  left: 0;
  top: 0;

  margin: 0px auto 0px auto;
  position: absolute;
  display: block;
  width: @gameWidth;
  height: @gameHeight;

  .nav {
    // send layer
    left: -@sceneBorderWidth;
    top: -@sceneBorderWidth;
  }

  .scene {
    pointer-events: none;
  }

  &.active > .scene {
    pointer-events: all;
  }

  > .scene.active {
    z-index: 9;
    transform: none !important;

    .text-box {
      opacity: 1;
      &.hidden {
        opacity: 0;
      }
    }
  }

  &.c1 {
    .scene {
      transform: scale(0.5);
      transform-origin: 50% 50%;
    }
  }

  &.c2 {
    .scene {
      transform: scale(0.4);
    }
    .scene:nth-child(1) {
      transform-origin: 13% 50%;
    }
    .scene:nth-child(2) {
      transform-origin: 87% 50%;
    }
  }

  &.c3 {
    .scene {
      transform: scale(0.3);
    }
    .scene:nth-child(1) {
      transform-origin: 13% 20%;
    }
    .scene:nth-child(2) {
      transform-origin: 87% 20%;
    }
    .scene:nth-child(3) {
      transform-origin: 50% 75%;
    }
  }

  &.c4,
  &.c5 {
    .scene {
      transform: scale(0.25);
    }
    .scene:nth-child(1) {
      transform-origin: 25% 13%;
    }
    .scene:nth-child(2) {
      transform-origin: 75% 13%;
    }
    .scene:nth-child(3) {
      transform-origin: 10% 50%;
    }
    .scene:nth-child(4) {
      transform-origin: 50% 50%;
    }
    .scene:nth-child(5) {
      transform-origin: 90% 50%;
    }
  }
}

